quiz - show sentence comment; statistics words

--- a/langtut/quiz.html
+++ b/langtut/quiz.html
@@ -37,6 +37,7 @@
 <div id="answerDetails">
 Word: <span id="questionWord"></span><br/>
 Sentence id: <span id="answerId"></span><br/>
+Comment: <span id="comment"></span><br/>
 </div>
 
 <br/>
