--- a/langtut/quiz.html
+++ b/langtut/quiz.html
@@ -43,5 +43,9 @@ Comment: <span id="comment"></span><br/>
 <br/>
 <a href="index.html">[Index]</a><br/>
 
+<br/>
+<button type="button" id="btnDebugOn" onclick="toggleDebug(true)">Debug</button><br/>
+<button type="button" id="btnDebugOff" onclick="toggleDebug(false)">Hide debug</button><br/>
+
 </body>
 </html>
