--- a/langtut/index.html
+++ b/langtut/index.html
@@ -8,6 +8,7 @@
 <body>
 
 <a href="quiz.html">Quiz</a><br/>
+<a href="selection.html">Selection</a><br/>
 <br/>
 <a href="wordlist.html">Word list</a><br/>
 <a href="stat.html">Statistics</a><br/>
