--- a/langtut/quiz.html
+++ b/langtut/quiz.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="langtut.css" type="text/css">
     <title>quiz</title>
     <!--data-->
+    <script src="data/common.js"></script>
     <script src="data/w_a.js"></script>
     <script src="data/w_b.js"></script>
     <script src="data/word_final.js"></script>
@@ -44,8 +45,7 @@ Comment: <span id="comment"></span><br/>
 <a href="index.html">[Index]</a><br/>
 
 <br/>
-<button type="button" id="btnDebugOn" onclick="toggleDebug(true)">Debug</button><br/>
-<button type="button" id="btnDebugOff" onclick="toggleDebug(false)">Hide debug</button><br/>
+<button type="button" id="btnDebugOn" onclick="toggleDebug(true)">Debug</button><button type="button" id="btnDebugOff" onclick="toggleDebug(false)">Hide debug</button><br/>
 
 </body>
 </html>
