--- a/langtut/selection.html
+++ b/langtut/selection.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <link rel="stylesheet" href="langtut.css" type="text/css">
-    <title>Book input</title>
+    <title>selection</title>
     <!--data-->
     <script src="data/common.js"></script>
     <script src="data/w_a.js"></script>
@@ -12,27 +12,11 @@
     <script src="data/sentence_final.js"></script>
     <!--functionality-->
     <script src="common.js"></script>
-    <script src="book_input.js"></script>
+    <script src="selection.js"></script>
 </head>
 <body onLoad="init()">
 
-<div id="main">
-    Input:<br/>
-    <textarea id="input" rows="15" cols="50">
-@@p:50
-admissions|v:admission
-come off it|v:to come off something
-tempted|v:tempt
-accomplices|v:accomplice
-double talk
-@@p:50
-trick into
-lunkheaded
-stumbling|v:stumble
-</textarea><br/>
-    <button id="btn_plan" type="button" onclick="clickGenerate()">Process</button>
-
-    <div id="wordList"></div>
+<div id="selection">
 </div>
 
 </body>
