--- a/langtut/stat.html
+++ b/langtut/stat.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="langtut.css" type="text/css">
     <title>stat</title>
     <!--data-->
+    <script src="data/common.js"></script>
     <script src="data/w_a.js"></script>
     <script src="data/w_b.js"></script>
     <script src="data/word_final.js"></script>
