quiz - show other words

--- a/langtut/quiz.html
+++ b/langtut/quiz.html
@@ -39,6 +39,7 @@
 Word: <span id="questionWord"></span><br/>
 Sentence id: <span id="answerId"></span><br/>
 Comment: <span id="comment"></span><br/>
+<div id="otherWords"></div>
 </div>
 
 <br/>
