separate work.html, words without tags fix, idioms selection...

--- a/langtut/work.html
+++ b/langtut/work.html
@@ -3,15 +3,12 @@
 <head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <link rel="stylesheet" href="langtut.css" type="text/css">
-    <title>langtut</title>
+    <title>langtut work</title>
 </head>
 <body>
 
-<a href="quiz.html">Quiz</a><br/>
-<a href="selection.html">Selection</a><br/>
-<br/>
-<a href="wordlist.html">Word list</a><br/>
-<a href="stat.html">Statistics</a><br/>
+<a href="book_input.html">Book input</a><br/>
+<a href="enter.html">Enter</a><br/>
 
 </body>
 </html>
