--- a/langtut/book_input.html
+++ b/langtut/book_input.html
@@ -10,6 +10,7 @@
     <script src="data/w_b.js"></script>
     <script src="data/word_final.js"></script>
     <script src="data/sentence_final.js"></script>
+    <script src="data/sentence_yourdictionary.js"></script>
     <!--functionality-->
     <script src="common.js"></script>
     <script src="book_input.js"></script>
