--- a/langtut/index.html
+++ b/langtut/index.html
@@ -7,10 +7,12 @@
 </head>
 <body>
 
-<a href="quiz.html">Quiz</a><br/>
-<a href="selection.html">Selection</a><br/>
+<a href="selection.html">Quiz Selections</a><br/>
+<ul>
+<li><a href="quiz.html">Quiz - All words</a><br/></li>
+</ul>
 <br/>
-<a href="wordlist.html">Word list</a><br/>
+<a href="index_wordlist.html">Word lists</a><br/>
 <a href="stat.html">Statistics</a><br/>
 
 </body>
