--- a/langtut/index.html
+++ b/langtut/index.html
@@ -9,7 +9,8 @@
 
 <a href="selection.html">Quiz Selections</a><br/>
 <ul>
-<li><a href="quiz.html">Quiz - All words</a><br/></li>
+    <li><a href="quiz.html#plus">Quiz - 0+</a><br/></li>
+    <li><a href="quiz.html">Quiz - All words</a><br/></li>
 </ul>
 <br/>
 <a href="index_wordlist.html">Word lists</a><br/>
