--- a/langtut/index.html
+++ b/langtut/index.html
@@ -9,9 +9,12 @@
 
 <a href="selection.html">Quiz Selections</a><br/>
 <ul>
-    <li><a href="quiz.html#plus">Quiz - 0+</a><br/></li>
-    <li><a href="quiz.html">Quiz - All words</a><br/></li>
+    <li><a href="quiz.html#plus">Quiz - 0+</a></li>
+    <li><a href="quiz.html">Quiz - All words</a></li>
 </ul>
+
+<br/>
+<a href="quiz_word.html#syn">Quiz Synonyms</a><br/>
 <br/>
 <a href="index_wordlist.html">Word lists</a><br/>
 <a href="stat.html">Statistics</a><br/>
