--- a/langtut/index.html
+++ b/langtut/index.html
@@ -9,8 +9,9 @@
 
 <a href="selection.html">Quiz Selections</a><br/>
 <ul>
-    <li><a href="quiz.html#plus">Quiz - 0+</a></li>
     <li><a href="quiz.html">Quiz - All words</a></li>
+    <li><a href="quiz.html#plus">Quiz - 0+</a></li>
+    <li><a href="quiz.html#minus">Quiz - -1</a></li>
 </ul>
 
 <br/>
