--- a/langtut/quiz.html
+++ b/langtut/quiz.html
@@ -36,8 +36,10 @@
     </div>
 </div>
 
+<div id="analysis">
+</div>
+
 <div id="answerDetails">
-Word: <span id="questionWord"></span><br/>
 Sentence id: <span id="answerId"></span><br/>
 Comment: <span id="comment"></span><br/>
 <div id="otherWords"></div>
