show book and tags

--- a/langtut/quiz.html
+++ b/langtut/quiz.html
@@ -29,6 +29,7 @@
 <div id="questionSection">
     <div>
         <span id="question"></span>
+        <span id="questionExtras"></span>
     </div>
 
     <div id="showAnswerSection">
