--- a/langtut/index.html
+++ b/langtut/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<a href="selection.html">Quiz Selections</a><br/>
+<a href="selection.html">Quiz Selections</a>
 <ul>
     <li><a href="quiz.html#plus">Quiz - Focus - 0+</a></li>
     <li><a href="quiz.html">Quiz - All words</a></li>
